--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,3 +57,7 @@ margin-right: auto;
 padding-top: 50px;
 
 }
+
+footer {
+image:url("https://www.bombardier.com/en/media/multimedia-gallery/details.bombardier-transportation-automated-monorails.html?filter-bu=buisness_unit:transport");
+}
